some tips added

--- a/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/main.html
+++ b/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/main.html
@@ -13,7 +13,7 @@
         <meta property="og:description" content="{{cookiecutter.description}}">
         <meta name="description" content="{{cookiecutter.description}}">
 
-        {% raw %}<!-- favicons -->
+        {% raw %}<!-- favicons for all devices. recommended generator: https://realfavicongenerator.net/ -->
         <meta property="og:image" content="{% static 'images/favicons/apple-touch-icon.png' %}">
         <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/favicons/apple-touch-icon.png' %}">
         <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicons/favicon-32x32.png' %}">
