--- a/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/main.html
+++ b/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/main.html
@@ -9,7 +9,7 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="{{cookiecutter.project_name}}">
         <meta property="og:site_name" content="{{cookiecutter.project_name}}">
-        <meta property="og:url" content="https://{{cookiecutter.domain_name}}">
+        <meta property="og:url" content="https://{{cookiecutter.domain}}">
         <meta property="og:description" content="{{cookiecutter.description}}">
         <meta name="description" content="{{cookiecutter.description}}">
 
