--- a/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/main.html
+++ b/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/main.html
@@ -36,11 +36,8 @@
         <div id="main"></div>
     </body>
 
-    {% if cookiecutter.analytics == 'Google Analytics' -%}{% raw %}{% if google_analytics %}<script type="text/javascript">var analytics = "{{ google_analytics }}"</script>{% endif %}{% endraw %}{% endif %}
-    {% if cookiecutter.analytics == 'Yandex Metrika' -%}{% raw %}{% if yandex_metrika %}
-        <script src="https://mc.yandex.ru/metrika/watch.js"></script>
-        <script type="text/javascript">var metrika = new Ya.Metrika({id: {{ yandex_metrika }}})</script>
-    {% endif %}{% endraw %}{% endif %}
+    {% if cookiecutter.analytics == 'Google Analytics' -%}{% raw %}{% if google_analytics %}<script>var analytics = "{{ google_analytics }}"</script>{% endif %}{% endraw %}{% endif %}
+    {% if cookiecutter.analytics == 'Yandex Metrika' -%}{% raw %}<script>var metrika = {{ yandex_metrika }}</script>{% endraw %}{% endif %}
     {% raw %}<script type="text/javascript">var DEBUG = {{ DEBUG | lower }}</script>{% endraw %}
     <script src="{% if cookiecutter.static_and_media == 'Amazon S3' -%}{% raw %}{% if DEBUG %}http://localhost:3000{% static 'dist/build.js' %}{% else %}{% static 'dist/build.js.gz' %}{% endif %}{% endraw %}{% else %}{% raw %}{% if DEBUG %}http://localhost:3000{% endif %}{% static 'dist/build.js' %}{% endraw %}{% endif %}" async></script>
     {% if cookiecutter.use_ckeditor == "y" -%}<script src="https://cdn.ckeditor.com/4.7.3/basic/ckeditor.js" async></script>{% endif %}
