--- a/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/main.html
+++ b/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/main.html
@@ -4,39 +4,39 @@
 {% load render_bundle from webpack_loader %}
 {% endraw %}
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>{{cookiecutter.project_name}}</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="theme-color" content="#424770">
-        <meta property="og:type" content="website">
-        <meta property="og:title" content="{{cookiecutter.project_name}}">
-        <meta property="og:site_name" content="{{cookiecutter.project_name}}">
-        <meta property="og:url" content="https://{{cookiecutter.domain}}">
-        <meta property="og:description" content="{{cookiecutter.description}}">
-        <meta name="description" content="{{cookiecutter.description}}">
+  <head>
+    <meta charset="utf-8">
+    <title>{{cookiecutter.project_name}}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#27a83b">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="{{cookiecutter.project_name}}">
+    <meta property="og:site_name" content="{{cookiecutter.project_name}}">
+    <meta property="og:url" content="https://{{cookiecutter.domain}}">
+    <meta property="og:description" content="{{cookiecutter.description}}">
+    <meta name="description" content="{{cookiecutter.description}}">
 
-        {% raw -%}
-        <!-- favicons for all devices. recommended generator: https://realfavicongenerator.net/ -->
-        <meta property="og:image" content="{% static 'images/favicons/apple-touch-icon.png' %}">
-        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/favicons/apple-touch-icon.png' %}">
-        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicons/favicon-32x32.png' %}">
-        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicons/favicon-16x16.png' %}">
-        <link rel="manifest" href="{% static 'images/favicons/manifest.json' %}">
-        <link rel="mask-icon" href="{% static 'images/favicons/safari-pinned-tab.svg' %}" color="#5bbad5">
-        {% endraw -%}
+    {% raw -%}
+    <!-- favicons for all devices. recommended generator: https://realfavicongenerator.net/ -->
+    <meta property="og:image" content="{% static 'images/favicons/apple-touch-icon.png' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/favicons/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicons/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicons/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'images/favicons/manifest.json' %}">
+    <link rel="mask-icon" href="{% static 'images/favicons/safari-pinned-tab.svg' %}" color="#27a83b">
+    {% endraw -%}
 
-        <meta name="apple-mobile-web-app-title" content="{{cookiecutter.project_name}}">
-        <meta name="application-name" content="{{cookiecutter.project_name}}">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    </head>
+    <meta name="apple-mobile-web-app-title" content="{{cookiecutter.project_name}}">
+    <meta name="application-name" content="{{cookiecutter.project_name}}">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  </head>
 
-    <body style="margin: 0">
-        <div id="main"></div>
-    </body>
+  <body style="margin: 0">
+    <div id="main"></div>
+  </body>
 
-    {% if cookiecutter.analytics == 'Google Analytics' -%}{% raw %}{% if GOOGLE_ANALYTICS %}<script>var GOOGLE_ANALYTICS = "{{ GOOGLE_ANALYTICS }}"</script>{% endif %}{% endraw %}{% endif %}
-    {% if cookiecutter.analytics == 'Yandex Metrika' -%}{% raw %}<script>var YANDEX_METRIKA = {{ YANDEX_METRIKA }}</script>{% endraw %}{% endif %}
-    {% if cookiecutter.use_sentry == 'y' %}{% raw %}<script>var SENTRY_PUBLIC_DSN = "{{ SENTRY_PUBLIC_DSN }}"</script>{% endraw %}{% endif %}
-    {% raw %}{% render_bundle 'main' %}{% endraw %}
+  {% if cookiecutter.analytics == 'Google Analytics' -%}{% raw %}{% if GOOGLE_ANALYTICS %}<script>var GOOGLE_ANALYTICS = "{{ GOOGLE_ANALYTICS }}"</script>{% endif %}{% endraw %}{% endif %}
+  {% if cookiecutter.analytics == 'Yandex Metrika' -%}{% raw %}<script>var YANDEX_METRIKA = {{ YANDEX_METRIKA }}</script>{% endraw %}{% endif %}
+  {% if cookiecutter.use_sentry == 'y' %}{% raw %}<script>var SENTRY_PUBLIC_DSN = "{{ SENTRY_PUBLIC_DSN }}"</script>{% endraw %}{% endif %}
+  {% raw %}{% render_bundle 'main' %}{% endraw %}
 </html>
