refactor compose, serve static by Caddy

--- a/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/main.html
+++ b/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/main.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 {% raw %}
 {% load static %}
-{% load render_bundle from webpack_loader %}
 {% endraw %}
 <html lang="en">
   <head>
@@ -38,5 +37,12 @@
   {% if cookiecutter.analytics == 'Google Analytics' -%}{% raw %}{% if GOOGLE_ANALYTICS %}<script>var GOOGLE_ANALYTICS = "{{ GOOGLE_ANALYTICS }}"</script>{% endif %}{% endraw %}{% endif %}
   {% if cookiecutter.analytics == 'Yandex Metrika' -%}{% raw %}<script>var YANDEX_METRIKA = {{ YANDEX_METRIKA }}</script>{% endraw %}{% endif %}
   {% if cookiecutter.use_sentry == 'y' %}{% raw %}<script>var SENTRY_PUBLIC_DSN = "{{ SENTRY_PUBLIC_DSN }}"</script>{% endraw %}{% endif %}
-  {% raw %}{% render_bundle 'main' %}{% endraw %}
+
+  {% raw %}
+      {% if DEBUG %}
+          <script type="text/javascript" src="http://localhost:3000/static/dist/bundle.js"></script>
+      {% else %}
+          <script type="text/javascript" src="{% static 'dist/bundle.js' %}"></script>
+      {% endif %}
+  {% endraw %}
 </html>
