fix: local static

--- a/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/main.html
+++ b/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/main.html
@@ -40,7 +40,7 @@
 
   {% raw %}
       {% if DEBUG %}
-          <script type="text/javascript" src="http://localhost:3000/static/dist/bundle.js"></script>
+          <script type="text/javascript" src="http://localhost:3000/staticfiles/dist/bundle.js"></script>
       {% else %}
           <script type="text/javascript" src="{% static 'dist/bundle.js' %}"></script>
       {% endif %}
